--- a/react-jukebox-front-end-lab/src/App.css
+++ b/react-jukebox-front-end-lab/src/App.css
@@ -4,3 +4,20 @@
   padding: 2rem;
   text-align: center;
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(250px, 1fr));
+  grid-gap: 1em;
+  padding: 0.5em;
+}
+
+.card {
+  border-radius: 4px;
+  box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.3);
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: space-between;
+  background-color: #424242;
+}
